Fix player being cropped on mobile devices

--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -13,8 +13,8 @@
 @media (max-aspect-ratio: 5/6) {
     .player-wrapper {
         position: fixed;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         top: 0;
         left: 0;
         right: 0;
